<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_data_sync">
        <ListPreference
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency"/>
        <EditTextPreference
            android:defaultValue="@string/current_version"
            android:enabled="false"
            android:key="version"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/check_for_updates"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/account">
        <SwitchPreference
            android:key="feed"
            android:summary="@string/pref_get_notifications_description"
            android:title="@string/pref_get_notifications"/>
        <Preference
            android:key="logout"
            android:title="@string/action_logout"/>
    </PreferenceCategory>


</PreferenceScreen>
