<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_quizzes"
            android:checked="true"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_quizzes"/>
        <item
            android:id="@+id/nav_random_quiz"
            android:checkable="false"
            android:icon="@drawable/ic_menu_dice"
            android:title="@string/menu_random_quiz"/>
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/menu_results"/>

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
        <item android:title=""/>
    </group>

</menu>
