<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".UserResultActivity">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>

    <ScrollView
        android:id="@+id/scroll_quiz_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e6e9ec"
        android:fillViewport="true"
        android:visibility="invisible">


        <RelativeLayout
            android:id="@+id/test_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="#e6e9ec"
            android:fillViewport="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".UserResultActivity"
            tools:showIn="@layout/activity_result">

            <ImageView
                android:id="@+id/play_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/profile_default_background"
                android:scaleType="centerCrop"/>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_alignBottom="@id/play_background"
                android:background="@drawable/results_transition"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <RelativeLayout
                    android:id="@+id/result_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="150dp"
                    android:background="@drawable/result_content_background"
                    android:paddingBottom="15dp"
                    android:paddingTop="70dp">

                    <TextView
                        android:id="@+id/result_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:textAlignment="center"
                        android:textColor="#4c5052"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/result_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/result_title"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:textColor="#0a0a0c"
                        android:textSize="17sp"/>
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/progress_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/result_progress_rounded"
                    android:padding="8dp">

                    <com.github.lzyzsd.circleprogress.ArcProgress
                        android:id="@+id/arc_progress"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="#00000000"
                        app:arc_bottom_text="@string/quiz_score"
                        app:arc_finished_color="@color/colorPrimary"
                        app:arc_progress="0"
                        app:arc_stroke_width="10dp"
                        app:arc_suffix_text_size="17sp"
                        app:arc_text_color="#606060"
                        app:arc_text_size="40sp"
                        app:arc_unfinished_color="#e1e1e1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/result_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/corners"
                        android:onClick="btnShare"
                        android:paddingBottom="32dp"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:paddingTop="32dp"
                        android:text="@string/btn_share"
                        android:textSize="15.5sp"/>

                    <Button
                        android:id="@+id/restart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:background="@drawable/corners_enabled"
                        android:onClick="btnTryAgain"
                        android:paddingBottom="32dp"
                        android:paddingTop="32dp"
                        android:text="@string/btn_quiz_restart"
                        android:textSize="15.5sp"/>

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>